new version. still working on it.

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,19 +1,32 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: beldemir <beldemir@student.42istanbul.c    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2025/03/23 11:54:14 by beldemir          #+#    #+#              #
+#    Updated: 2025/03/23 17:39:26 by beldemir         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = philo
 CC = cc
 CFLAGS = -Wall -Wextra -Werror
-SRCS = philo.c start.c prints.c utils.c time.c waiter.c
+THREADFLAGS = -lpthread
+SRCS = philo.c utils.c start.c routine.c
 OBJS = $(SRCS:.c=.o)
 
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
+	$(CC) $(CFLAGS) $(THREADFLAGS) $(OBJS) -o $(NAME)
 
 clean:
-	rm -f $(OBJS)
+	rm -rf $(OBJS)
 
 fclean: clean
-	rm -f $(NAME)
+	rm -rf $(NAME)
 
 re: fclean all
 
