--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: beldemir <beldemir@student.42istanbul.c    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/03/23 11:54:14 by beldemir          #+#    #+#              #
-#    Updated: 2025/04/23 04:50:14 by beldemir         ###   ########.fr        #
+#    Updated: 2025/04/25 20:53:03 by beldemir         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,7 @@ NAME = philo
 CC = cc
 CFLAGS = -Wall -Wextra -Werror
 THREADFLAGS = -lpthread
-SRCS = philo.c utils.c start.c waiter.c
+SRCS = philo.c utils.c start.c waiter.c tasks.c routine.c
 OBJS = $(SRCS:.c=.o)
 
 all: $(NAME)
