it does not work properly but the mindset and the whole code is done. i just need to think and do some changes on it.

--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -6,7 +6,7 @@
 #    By: beldemir <beldemir@student.42istanbul.c    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/03/23 11:54:14 by beldemir          #+#    #+#              #
-#    Updated: 2025/05/05 21:45:55 by beldemir         ###   ########.fr        #
+#    Updated: 2025/05/13 20:32:05 by beldemir         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,8 +14,8 @@ NAME = philo_bonus
 CC = cc
 CFLAGS = -Wall -Wextra -Werror
 THREADFLAGS = -lpthread
-SRCS = philo_bonus.c utils_bonus.c start_bonus.c \ 
-waiter_bonus.c tasks_bonus.c routine_bonus.c
+SRCS = philo_bonus.c utils_bonus.c start_bonus.c \
+tasks_bonus.c routine_bonus.c
 OBJS = $(SRCS:.c=.o)
 
 all: $(NAME)
