philo_final basic structure builded.

--- a/philo_final/Makefile
+++ b/philo_final/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: beldemir <beldemir@student.42istanbul.c    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2025/07/04 15:01:36 by beldemir          #+#    #+#              #
+#    Updated: 2025/07/04 15:01:37 by beldemir         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = philo_bonus
 CC = cc
 CFLAGS = -Wall -Wextra -Werror
