working on philo_final

--- a/philo_final/Makefile
+++ b/philo_final/Makefile
@@ -6,7 +6,7 @@
 #    By: beldemir <beldemir@student.42istanbul.c    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/07/04 15:01:36 by beldemir          #+#    #+#              #
-#    Updated: 2025/07/04 15:01:37 by beldemir         ###   ########.fr        #
+#    Updated: 2025/07/09 13:32:10 by beldemir         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,7 @@ NAME = philo_bonus
 CC = cc
 CFLAGS = -Wall -Wextra -Werror
 THREADFLAGS = -lpthread
-SRCS = philo_bonus.c 
+SRCS = philo_bonus.c helpers_bonus.c routine_bonus.c
 OBJS = $(SRCS:.c=.o)
 
 all: $(NAME)
